[package]
name = "dproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap={version="4.2.1", features=["derive"]}
sha256="1.1.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing="0.1.37"
tracing-subscriber={version="0.3.16", features=["env-filter"]}
once_cell = "1.17.1"
tls-parser = "0.11.0"
hyper = { version = "0.14.25", features = ["full"] }
hyper-trust-dns = "0.5.0"